[package]
name = "bed2gtf"
version = "1.8.0"
authors = ["alejandrogzi <jose.gonzalesdezavala1@unmsm.edu.pe>"]
edition = "2021"
license = "MIT"
description = "A fast and memory efficient BED to GTF converter"
homepage = "https://github.com/alejandrogzi/bed2gtf"
repository = "https://github.com/alejandrogzi/bed2gtf"
readme = "README.md"
keywords = ["bed", "gtf", "cli", "bed2gtf"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = {version = "4.0"}
colored = {version = "1.0.0"}
peak_alloc = {version = "0.2.0"}
log = "0.4.14"
simple_logger = "4.0.0"
indoc = "1.0"
natord = "1.0.9"
thiserror = "1.0"
chrono = "0.4.31"
flate2 = "1.0"
memchr = "2.6.4"

[profile.release]
lto = true

[lib]
name = "bed2gtf"
path = "src/lib.rs"

[[bin]]
name = "bed2gtf"
path = "src/main.rs"
