[package]
name = "bed2gtf"
version = "1.9.3"
authors = ["alejandrogzi <jose.gonzalesdezavala1@unmsm.edu.pe>"]
edition = "2021"
license = "MIT"
description = "A fast and memory efficient BED to GTF converter"
homepage = "https://github.com/alejandrogzi/bed2gtf"
repository = "https://github.com/alejandrogzi/bed2gtf"
readme = "README.md"
keywords = ["bed", "gtf", "cli", "bed2gtf"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = { version = "2.0.0" }
log = "0.4.14"
simple_logger = "4.0.0"
indoc = "2.0"
natord = "1.0.9"
chrono = "0.4.31"
rayon = "1.8.0"
num_cpus = "1.16.0"
flate2 = "1.0.28"
libc = "0.2.101"
thiserror = "1.0.58"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
name = "bed2gtf"
path = "src/lib.rs"
